[tool.poetry]
name = "streak"
version = "0.1.0"
description = ""
authors = ["diohabara <diohabara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
